# SampleProject

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: pr.yml
compose/local/: Dockerfile
core/: manage.py
core/config/: asgi.py  wsgi.py
core/config/settings/: __init__.py  base.py  celery.py  envvars.py  logging.py  rest_framework.py
core/general/utils/: logging.py  pytest.py  settings.py
sample_project/: manage.py  test.py
sample_project/config/: asgi.py  celery.py  wsgi.py
sample_project/config/settings/: __init__.py  base.py  celery.py  custom.py  envvars.py
sample_project/config/settings/templates/: settings.dev.py
sample_project/general/utils/: misc.py
scripts/: run-celery-beat.sh  run-celery.sh  run-django.sh
