[tool.poetry]
name = "sampleproject"
version = "0.1.0"
description = ""
authors = ["shaghayegh ghorbanpoor <ghorbanpoor.shaghayegh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"
django-cors-headers = "^4.4.0"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
celery = "^5.4.0"
django = "^5.0"
django-celery-beat = "^2.6.0"
redis = "^5.0.8"
uvicorn = "^0.30.6"

[tool.poetry.group.git.dependencies]
sa_exception_handler = { git = "https://sanaap_shared_packages:glpat-jRNqdSLhyyiSCD156_du@gitlab.sanaap.co/backend/sanaap_shared_packages.git", branch = "master" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
